--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://kit-app.reportobot.com/js/embedbot.js" defer="defer"></script>
+    <script src="https://kit-api.reportobot.com/js/embedbot.js" defer="defer"></script>
 
    
 </head>
