--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit-api.reportobot.com/js/embedbot.js" defer="defer"></script>
-    <script src= "https://gurulahima.github.io/testSite/index.html" defer></script>
+    <script src= "https://gurulahima.github.io/testSite/js.js" defer></script>
 
    
 </head>
